--- a/Project.toml
+++ b/Project.toml
@@ -1,3 +1,6 @@
+name = "NetworkCartelDetection"
+authors = ["Martin Smit <jacobusmmsmit@gmail.com>",]
+
 [deps]
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
